fixed problem with bomb hints spilling onto next row

--- a/styles/main.css
+++ b/styles/main.css
@@ -8,16 +8,16 @@ body {
 }
 
 .controls-wrapper {
-height: 10vh;
-display: flex;
-justify-content: space-evenly;
-align-items: center;
+  height: 10vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .grid-wrapper {
-height: 50vh;
-display: flex;
-justify-content: center;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
 }
 
 .grid {
@@ -26,16 +26,22 @@ justify-content: center;
   display: flex;
   flex-wrap: wrap;
   height: 100%;
-  justify-content: center;
+  /* justify-content: center;
+  align-items: center; */
   height: 600px;
   width: 600px;
 }
 
 .grid div {
+  display: flex;
   border: 1px solid lightgrey;
   flex-grow: 1;
   height: 11.11%;
   width: 11.11%;
+  font-weight: bold;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
 }
 
 .grid div.bomb {
@@ -43,6 +49,10 @@ justify-content: center;
   background-repeat: no-repeat;
   background-size: contain;
   cursor: pointer;
+  font-size: 20px;
+  font-weight: lighter;
+  color: rgb(120, 120, 120);
+  /* color: transparent; */
 }
 
 /* .grid div.bomb-hint {
@@ -55,8 +65,10 @@ justify-content: center;
 .grid div.cover {
   background-color: lightgrey;
   border: 1px solid darkgray;
-  opacity: 1;
+ 
+  color: transparent;
 }
+
 .grid div.flag {
   background-color: darksalmon;
   border: 1px solid sandybrown;
